--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,4 +7,10 @@
     {{ form.as_p }}
     <button type="submit">로그인</button>
   </form>
+  <div class="mt-3">
+    <a href="{% url 'password_reset_request' %}">비밀번호를 잊으셨나요?</a>
+  </div>
+
+
+
 {% endblock %}
