--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <nav>
-        {% if request.session.nickname %}
-            <p>{{ request.session.nickname }}님 환영합니다.</p>
+        {% if user.is_authenticated %}
+            <p>{{ user.nickname }}님 환영합니다.</p>
+            <a href="{% url 'profile' %}">마이페이지</a>
+            <a href="{% url 'post_create' %}">글쓰기</a>
             <a href="{% url 'logout' %}">로그아웃</a>
         {% else %}
             <a href="{% url 'login' %}">로그인</a>
