--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
             <p>{{ user.nickname }}님 환영합니다.</p>
             <a href="{% url 'profile' %}">마이페이지</a>
             <a href="{% url 'post_create' %}">글쓰기</a>
+            <a href="{% url 'bookmark_list' %}">내 북마크</a>
             <a href="{% url 'logout' %}">로그아웃</a>
         {% else %}
             <a href="{% url 'login' %}">로그인</a>
