--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -73,6 +73,21 @@
             <button type="submit" name="value" value="-1">👎</button>
         </form>
     {% endfor %}
+
+    <!-- 태그 표시 -->
+    {% if post.tags.all %}
+    <div class="mt-3">
+        <h5>태그:</h5>
+        <div>
+            {% for tag in post.tags.all %}
+            <a href="{% url 'tag_posts' tag.name %}" class="badge bg-primary me-1">{{ tag.name }}</a>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+
+
+
 {% endblock %}
 
 {% block styles %}
